Start look like section on services

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -11,16 +11,12 @@ layout: 'base.njk'
         </div>
         <div class="services-hero-text">
             <div class="services-hero-content">
-                <h1 class="about-title">Life transformation coaching</h1>
-                <h2 class="sect-title fw-n">Get ready to live full and free</h2>
+                <h1 class="about-title">TRANSFORMATIONAL COACHING</h1>
+                <h2 class="sect-title fw-n">From roadblock to revolution;</h2>
                 <p class="sect-title fw-n">
-                    Don't worry..
-                </p>
-                <p class="logo-3 services-logo-title">
-                    I've got you!
+                    helping women create a life without limits
                 </p>
             </div>
-            
         </div>
     </section>
     <!-- END: hero section -->
@@ -28,24 +24,71 @@ layout: 'base.njk'
     <!-- intro section -->
     <section class="services-intro">
         <h2 class="about-detail-title sect-title intro-title">
-            Aside from “how do I pronounce your name?... the SECOND most common question I am asked is..
+            Aside from “how do I pronounce your name?", the second most-asked question I get is
         </h2>
         <h3 class="services-intro-subtitle rob-font">
-            What actually is transformation coaching?
+            "What actually is transformational coaching?"
         </h3>
         <div class="intro-text">
             <p class="normal-text">
-                Awesome question! 
-                Transformation coaching helps you make profound changes to ultimately live happy and fulfilled. 
-                Together we take an inside out approach. So unlike traditional life coaching which centres around goals and external changes for surface level shifts, we go a little deeper….but not moonlight meditation deep, don’t worry. 
-                Through our work I help you find and harness your innate power and resilience (whether you believe it’s there or not). We follow a process of unlocking blockers and mindful self-awareness so you can step beyond the psychology that’s been holding you back from living a life you love. 
-
+                Transformational Coaching is an inside-out approach. Essentially, it’s digging deep (not moonlight meditation deep - but if that’s your thing, you go girl) to help you make the profound changes leading to a more fulfilled, happy life. Unlike traditional life coaching, which centres around goals and surface level shifts, we take it a step further by finding and harnessing your innate power and resilience (whether you believe it’s there or not). By unearthing these qualities, together we can unlock blockers to step beyond the psychology holding you back from living a life you love. Ready to make life-changing moves? You’ve come to the right place. 
             </p>
         </div>
         
     </section>
     <!-- END: intro section -->
 
+    {# <section class="services-hero">
+        <div class="services-hero-text">
+            <div class="services-hero-content">
+                <h2 class="sect-title fw-n">WHAT CAN THIS LOOK LIKE?</h2>
+                <ul class="look-like-list normal-text">
+                    <li class="look-like-item">Overcoming imposter syndrome to reach workplace goals</li>
+                    <li class="look-like-item">Creating a work/life balance that makes you equal parts fulfilled and happy</li>
+                    <li class="look-like-item">Learning to eliminate guilt and anxiety around becoming a mother or caring for your children</li>
+                    <li class="look-like-item">Addressing low self-esteem and lack of confidence</li>
+                    <li class="look-like-item">Developing techniques to handle overwhelming feelings or lack of control</li>
+                    <li class="look-like-item">Combatting anxiety to move toward your dream life</li>
+                    <li class="look-like-item">Breaking the cycle of negative thought patterns for a positive outlook</li>
+                    <li class="look-like-item">Addressing feelings of uneasiness and not living your ideal version of life </li>
+                    <li class="look-like-item">Eliminating mental roadblocks stopping you from reaching career goals</li>
+                    <li class="look-like-item">Arming you with tools to get the most from your important relationships</li>
+                </ul>
+            </div>
+        </div>
+        <div class="services-hero-img">
+            <img src="/static/img/Mhairi_pics/laughing-square-comp.jpg" alt="mhairi-life-coach-laughing">
+        </div>
+    </section> #}
+
+    <!-- what can this look like section -->
+    <section class="look-like">
+        <div class="look-like-text">
+            <div class="look-like-content">
+                <h3 class="look-like-title sect-title">
+                    WHAT CAN THIS LOOK LIKE?
+                </h3>
+                <ul class="look-like-list">
+                    <li class="look-like-item normal-text">Overcoming imposter syndrome to reach workplace goals</li>
+                    <li class="look-like-item normal-text">Creating a work/life balance that makes you equal parts fulfilled and happy</li>
+                    <li class="look-like-item normal-text">Learning to eliminate guilt and anxiety around becoming a mother or caring for your children</li>
+                    <li class="look-like-item normal-text">Addressing low self-esteem and lack of confidence</li>
+                    <li class="look-like-item normal-text">Developing techniques to handle overwhelming feelings or lack of control</li>
+                    <li class="look-like-item normal-text">Combatting anxiety to move toward your dream life</li>
+                    <li class="look-like-item normal-text">Breaking the cycle of negative thought patterns for a positive outlook</li>
+                    <li class="look-like-item normal-text">Addressing feelings of uneasiness and not living your ideal version of life </li>
+                    <li class="look-like-item normal-text">Eliminating mental roadblocks stopping you from reaching career goals</li>
+                    <li class="look-like-item normal-text">Arming you with tools to get the most from your important relationships</li>
+                </ul>
+            </div>
+        </div>
+        <div class="look-like-img">
+            <img src="/static/img/Mhairi_pics/laughing-square-comp.jpg" alt="mhairi-life-coach-laughing">
+        </div>
+    </section>
+
+    <!-- END: what can this look like section -->
+    
     <!-- who is this for -->
     <section class="who-is-this-for">
         <h2 class="known-for-title sect-title who-title">
