--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -503,41 +503,6 @@
 
         
     }
-    .normal-text{
-        margin-top: 2em;
-       
-        @media #{$breakpoint-sm}{
-            position: relative;
-            top: 3em;
-            width: 80%;
-            margin: auto;
-            font-size: 1.1em;
-        }
-        @media #{$breakpoint-md}{
-            position: relative;
-            width: 90%;
-            margin: 1.5em auto;
-            font-size: .85em;
-        }
-        @media #{$breakpoint-lg}{
-            position: relative;
-            width: 90%;
-            margin: 1.5em auto;
-            font-size: .8em;
-        }
-        @media #{$breakpoint-xl}{
-            position: relative;
-            width: 90%;
-            margin: 1.5em auto;
-            font-size: .65em;
-        }
-        @media #{$breakpoint-xxl}{
-            position: relative;
-            width: 90%;
-            margin: 1.5em auto;
-            font-size: .65em;
-        }
-    }
 }
 
 .look-like-text{
@@ -593,8 +558,19 @@
 .look-like-list{
     list-style: none;
     @media #{$breakpoint-min-md}{
-        text-align: left;
+        text-align: center;
         padding-left: .5em;
+    }
+    
+}
+
+.look-like-item{
+    margin: 0;
+
+    &::after{
+        content: "·";
+        display: block;
+        text-align: center;
     }
 }
 
