Add look like list new

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -38,90 +38,28 @@ layout: 'base.njk'
     </section>
     <!-- END: intro section -->
 
-    {# <section class="services-hero">
-        <div class="services-hero-text">
-            <div class="services-hero-content">
-                <h2 class="sect-title fw-n">WHAT CAN THIS LOOK LIKE?</h2>
-                <ul class="look-like-list normal-text">
-                    <li class="look-like-item">Overcoming imposter syndrome to reach workplace goals</li>
-                    <li class="look-like-item">Creating a work/life balance that makes you equal parts fulfilled and happy</li>
-                    <li class="look-like-item">Learning to eliminate guilt and anxiety around becoming a mother or caring for your children</li>
-                    <li class="look-like-item">Addressing low self-esteem and lack of confidence</li>
-                    <li class="look-like-item">Developing techniques to handle overwhelming feelings or lack of control</li>
-                    <li class="look-like-item">Combatting anxiety to move toward your dream life</li>
-                    <li class="look-like-item">Breaking the cycle of negative thought patterns for a positive outlook</li>
-                    <li class="look-like-item">Addressing feelings of uneasiness and not living your ideal version of life </li>
-                    <li class="look-like-item">Eliminating mental roadblocks stopping you from reaching career goals</li>
-                    <li class="look-like-item">Arming you with tools to get the most from your important relationships</li>
-                </ul>
-            </div>
-        </div>
-        <div class="services-hero-img">
-            <img src="/static/img/Mhairi_pics/laughing-square-comp.jpg" alt="mhairi-life-coach-laughing">
-        </div>
-    </section> #}
-
     <!-- what can this look like section -->
-    <section class="look-like">
-        <div class="look-like-text">
-            <div class="look-like-content">
-                <h3 class="look-like-title sect-title">
-                    WHAT CAN THIS LOOK LIKE?
-                </h3>
-                <ul class="look-like-list">
-                    <li class="look-like-item normal-text">Overcoming imposter syndrome to reach workplace goals</li>
-                    <li class="look-like-item normal-text">Creating a work/life balance that makes you equal parts fulfilled and happy</li>
-                    <li class="look-like-item normal-text">Learning to eliminate guilt and anxiety around becoming a mother or caring for your children</li>
-                    <li class="look-like-item normal-text">Addressing low self-esteem and lack of confidence</li>
-                    <li class="look-like-item normal-text">Developing techniques to handle overwhelming feelings or lack of control</li>
-                    <li class="look-like-item normal-text">Combatting anxiety to move toward your dream life</li>
-                    <li class="look-like-item normal-text">Breaking the cycle of negative thought patterns for a positive outlook</li>
-                    <li class="look-like-item normal-text">Addressing feelings of uneasiness and not living your ideal version of life </li>
-                    <li class="look-like-item normal-text">Eliminating mental roadblocks stopping you from reaching career goals</li>
-                    <li class="look-like-item normal-text">Arming you with tools to get the most from your important relationships</li>
-                </ul>
-            </div>
-        </div>
-        <div class="look-like-img">
-            <img src="/static/img/Mhairi_pics/laughing-square-comp.jpg" alt="mhairi-life-coach-laughing">
+    <section class="look-like-fade-sect">
+        <h3 class="look-like-title sect-title">
+            WHAT CAN THIS LOOK LIKE?
+        </h3>
+        <div class="look-like-fade">
+            <p class="look-like-item normal-text">Overcoming imposter syndrome to reach workplace goals</p>
+            <p class="look-like-item normal-text">Creating a work/life balance that makes you equal parts fulfilled and happy</p>
+            <p class="look-like-item normal-text">Learning to eliminate guilt and anxiety around becoming a mother or caring for your children</p>
+            <p class="look-like-item normal-text">Addressing low self-esteem and lack of confidence</p>
+            <p class="look-like-item normal-text">Developing techniques to handle overwhelming feelings or lack of control</p>
+            <p class="look-like-item normal-text">Combatting anxiety to move toward your dream life</p>
+            <p class="look-like-item normal-text">Breaking the cycle of negative thought patterns for a positive outlook</p>
+            <p class="look-like-item normal-text">Addressing feelings of uneasiness and not living your ideal version of life </p>
+            <p class="look-like-item normal-text">Eliminating mental roadblocks stopping you from reaching career goals</p>
+            <p class="look-like-item normal-text">Arming you with tools to get the most from your important relationships</p>
+            <p class="look-like-item normal-text">Forming techniques to aid productivity, consistency and focus</p>
+            <p class="look-like-item normal-text">Tackling your inner critic and changing the dialogue</p>
         </div>
     </section>
-
     <!-- END: what can this look like section -->
     
-    <!-- who is this for -->
-    <section class="who-is-this-for">
-        <h2 class="known-for-title sect-title who-title">
-            Who is this for?
-        </h2>
-        <div class="who-content">
-            <div class="who-item">
-                <h3 class="sect-subtitle who-for-sub">Do you know...</h3>
-                <p class="normal-text">
-                    what you want but stumble at repetitive hurdles? 
-                </p>
-            </div>
-            <div class="who-item">
-                <h3 class="sect-subtitle who-for-sub">Do you feel...</h3>
-                <p class="normal-text">
-                    like you aren’t living authentically but don’t know how to change it?
-                </p>
-            </div>
-            <div class="who-item">
-                <h3 class="sect-subtitle who-for-sub">Do you have...</h3>
-                <p class="normal-text">
-                    a sense something is missing but you can’t work out what?
-                </p>
-            </div>   
-            <div class="who-item">
-                <h3 class="sect-subtitle who-for-sub">Do you make...</h3>
-                <p class="normal-text">
-                    positive changes to your life but still don’t feel successful or fulfilled?  
-                </p>
-            </div>  
-        </div>
-    </section>
-    <!-- END: who is this for -->
 
     <!-- Parralex testimonial section -->
     <section class="testimonial-container">
